force-app/main/default/objects/FINS_Banking_Late_Fee__c/FINS_Banking_Late_Fee__c.object-meta.xml
<CustomObject>
    <label>Late Fee</label>
    <nameField>
        <displayFormat>LATF-{0000}</displayFormat>
        <label>Late Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>