force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Instruments__c.field-meta.xml
<CustomField>
    <fullName>Instruments__c</fullName>
    <description>How many financial instruments do they have with us?</description>
    <label># of instruments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>