force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Mockup_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Mockup_Coaching__c</fullName>
    <formula>IF( AND(TEXT(Status__c) != &quot;1&quot;, TEXT(Mockup_Prediction__c) != &quot;1&quot;, NOT(ISBLANK(Mockup_Prediction__c))), &quot;Please have more touchpoints with this customer and have them sooner, since it&apos;s now in risk due to amount of days outstanding&quot;, &quot;&quot;)</formula>
    <label>Mockup Coaching</label>
    <type>Text</type>
</CustomField>