force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Mockup_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Mockup_Prediction__c</fullName>
    <label>Mockup Prediction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>