force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This is a person&apos;s name as a custom field. Chose not to add it to the Contact to make it simple for sake of demo to get the point across and avoid confusing anyone who is working on Contact UI/layouts (vs real life implementation, where relating it to a Contact makes the most sense)</description>
    <inlineHelpText>Person&apos;s name who owes the fee</inlineHelpText>
    <label>Person/Entity&apos;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>