force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Paid_off__c.field-meta.xml
<CustomField>
    <fullName>Paid_off__c</fullName>
    <formula>IF( Status__c = 1, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid off?</label>
    <type>Checkbox</type>
</CustomField>