force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Running_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Running_Amount_Due__c</fullName>
    <inlineHelpText>Total amount due, whether it&apos;s a flat fee or a moving aggregate that gets bigger over a course of time</inlineHelpText>
    <label>Running Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>