force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Touchpoints__c.field-meta.xml
<CustomField>
    <fullName>Touchpoints__c</fullName>
    <description>How many touchpoints did they have with us?</description>
    <label># of touchpoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>