force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Commercial Business Interest</fullName>
            </value>
            <value>
                <fullName>Wrongful Use Penalty</fullName>
            </value>
            <value>
                <fullName>Loan Payment Overdue</fullName>
            </value>
            <value>
                <fullName>Consulting Service Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>