force-app/main/default/objects/FINS_Banking_Late_Fee__c/fields/Years_with_us__c.field-meta.xml
<CustomField>
    <fullName>Years_with_us__c</fullName>
    <description>How many years have they been our customer?</description>
    <label>Years with us</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>