force-app/main/default/objects/FINS_Banking_Late_Fee__c/listViews/Fee_Insights.listView-meta.xml
<ListView>
    <fullName>Fee_Insights</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Running_Amount_Due__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_off__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unpaid Fee Insights</label>
</ListView>